--- a/index.html
+++ b/index.html
@@ -4,106 +4,209 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KGP-Struct | Structural Analysis Suite</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
-            --primary: #2563eb;
-            --dark: #0f172a;
+            --primary: #3b82f6;
+            --primary-dark: #2563eb;
+            --dark: #1e293b;
             --light: #f8fafc;
             --gray: #64748b;
+            --accent: #f43f5e;
         }
         body {
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
             margin: 0;
             padding: 0;
             background-color: var(--light);
             color: var(--dark);
             line-height: 1.6;
+            -webkit-font-smoothing: antialiased;
         }
         /* Navbar */
         nav {
-            background: white;
+            background: rgba(255, 255, 255, 0.8);
+            backdrop-filter: blur(10px);
             padding: 1rem 5%;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+            position: sticky;
+            top: 0;
+            z-index: 100;
+            border-bottom: 1px solid rgba(0,0,0,0.05);
         }
-        .logo { font-weight: 800; font-size: 1.5rem; letter-spacing: -1px; }
+        .logo { 
+            font-weight: 800; 
+            font-size: 1.5rem; 
+            letter-spacing: -0.5px;
+            color: var(--dark);
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
         .version-badge { 
-            background: #dbeafe; color: var(--primary); 
-            padding: 4px 8px; border-radius: 12px; 
-            font-size: 0.8rem; font-weight: 600;
+            background: #eff6ff; 
+            color: var(--primary); 
+            padding: 4px 10px; 
+            border-radius: 20px; 
+            font-size: 0.75rem; 
+            font-weight: 700;
+            border: 1px solid #dbeafe;
         }
 
         /* Hero Section */
         header {
             text-align: center;
-            padding: 5rem 1rem;
-            max-width: 800px;
+            padding: 8rem 1rem 6rem;
+            max-width: 900px;
             margin: 0 auto;
+            background: radial-gradient(circle at center, #eff6ff 0%, transparent 70%);
         }
-        h1 { font-size: 3.5rem; margin-bottom: 1rem; line-height: 1.1; }
-        .subtitle { font-size: 1.25rem; color: var(--gray); margin-bottom: 2rem; }
+        h1 { 
+            font-size: 4rem; 
+            margin-bottom: 1.5rem; 
+            line-height: 1.1; 
+            letter-spacing: -1.5px;
+            background: linear-gradient(to right, var(--dark), var(--primary));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+        .subtitle { 
+            font-size: 1.35rem; 
+            color: var(--gray); 
+            margin-bottom: 3rem; 
+            font-weight: 300;
+            max-width: 700px;
+            margin-left: auto;
+            margin-right: auto;
+        }
         
         /* Download Cards */
         .downloads {
             display: flex;
             justify-content: center;
-            gap: 20px;
+            gap: 30px;
             flex-wrap: wrap;
-            padding-bottom: 4rem;
+            padding-bottom: 6rem;
+            margin-top: -2rem;
         }
         .card {
             background: white;
             border: 1px solid #e2e8f0;
-            border-radius: 12px;
-            padding: 2rem;
-            width: 250px;
+            border-radius: 16px;
+            padding: 2.5rem;
+            width: 280px;
             text-align: center;
-            transition: transform 0.2s, box-shadow 0.2s;
+            transition: all 0.3s ease;
+            position: relative;
+            overflow: hidden;
         }
         .card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 10px 20px rgba(0,0,0,0.05);
+            transform: translateY(-8px);
+            box-shadow: 0 20px 40px rgba(0,0,0,0.08);
             border-color: var(--primary);
         }
-        .os-icon { font-size: 2rem; margin-bottom: 1rem; display: block; }
+        .os-icon { 
+            font-size: 2.5rem; 
+            margin-bottom: 1.5rem; 
+            display: block; 
+            color: var(--dark);
+        }
         .btn {
             display: inline-block;
             background: var(--primary);
             color: white;
-            padding: 10px 20px;
-            border-radius: 6px;
+            padding: 12px 24px;
+            border-radius: 8px;
             text-decoration: none;
             font-weight: 600;
-            margin-top: 1rem;
+            margin-top: 1.5rem;
             width: 80%;
+            transition: all 0.2s;
+            box-shadow: 0 4px 6px -1px rgba(37, 99, 235, 0.2);
         }
-        .btn:hover { background: #1d4ed8; }
-        .btn.secondary { background: #e2e8f0; color: var(--dark); }
-        .btn.secondary:hover { background: #cbd5e1; }
+        .btn:hover { 
+            background: var(--primary-dark); 
+            transform: translateY(-1px);
+            box-shadow: 0 6px 8px -1px rgba(37, 99, 235, 0.3);
+        }
+        .btn.secondary { 
+            background: white; 
+            color: var(--dark); 
+            border: 1px solid #e2e8f0;
+            box-shadow: 0 1px 2px rgba(0,0,0,0.05);
+        }
+        .btn.secondary:hover { 
+            background: #f8fafc; 
+            border-color: #cbd5e1;
+        }
         
-        .meta { font-size: 0.85rem; color: var(--gray); margin-top: 0.5rem; display: block; }
+        .meta { 
+            font-size: 0.85rem; 
+            color: var(--gray); 
+            margin-top: 0.75rem; 
+            display: block; 
+            font-weight: 500;
+        }
 
         /* Features */
-        .features { background: white; padding: 4rem 5%; }
+        .features { 
+            background: white; 
+            padding: 6rem 5%; 
+            border-top: 1px solid #f1f5f9;
+        }
         .grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
+            grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
+            gap: 3rem;
             max-width: 1200px;
             margin: 0 auto;
         }
-        .feature-item h3 { color: var(--primary); }
+        .feature-item {
+            padding: 2rem;
+            border-radius: 12px;
+            background: #f8fafc;
+            transition: background 0.3s;
+        }
+        .feature-item:hover {
+            background: #eff6ff;
+        }
+        .feature-item h3 { 
+            color: var(--dark); 
+            font-size: 1.25rem;
+            margin-top: 0;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+        .feature-item p {
+            color: var(--gray);
+            margin-bottom: 0;
+        }
+        .feature-icon {
+            color: var(--primary);
+            font-size: 1.2rem;
+        }
 
-        footer { text-align: center; padding: 2rem; color: var(--gray); font-size: 0.9rem; border-top: 1px solid #e2e8f0; }
+        footer { 
+            text-align: center; 
+            padding: 3rem; 
+            color: var(--gray); 
+            font-size: 0.9rem; 
+            border-top: 1px solid #e2e8f0;
+            background: white;
+        }
     </style>
 </head>
 <body>
 
     <nav>
-        <div class="logo">KGP-Struct <span class="version-badge">v1.0.0</span></div>
-        <a href="https://github.com/harshit3478/KGP-struct" target="_blank" style="color:var(--dark); text-decoration:none; font-weight:600;">View Source on GitHub →</a>
+        <div class="logo"><i class="fas fa-cubes" style="color: var(--primary);"></i> KGP-Struct <span class="version-badge">v1.0.0</span></div>
+        <a href="https://github.com/harshit3478/KGP-struct" target="_blank" style="color:var(--dark); text-decoration:none; font-weight:600; font-size: 0.9rem; display: flex; align-items: center; gap: 8px;"><i class="fab fa-github" style="font-size: 1.1rem;"></i> View Source</a>
     </nav>
 
     <header>
@@ -115,17 +218,17 @@
     <section id="download" class="downloads">
         <!-- Windows -->
         <div class="card">
-            <span class="os-icon">🪟</span>
+            <span class="os-icon"><i class="fab fa-windows"></i></span>
             <h3>Windows</h3>
             <span class="meta">Min: Windows 10/11</span>
             <!-- REPLACE '#' WITH YOUR WINDOWS ZIP LINK FROM GITHUB RELEASES -->
-            <a href="#" class="btn secondary" onclick="alert('Windows build coming soon! Please use Source Code.')">Download .exe</a>
+            <a href="https://github.com/harshit3478/KGP-struct/releases/download/new/KGP-Struct-Source-v1.0.0.zip" class="btn secondary" onclick="alert('Windows build coming soon! Please use Source Code.')">Download .exe</a>
             <span class="meta">v1.0.0 | 64-bit</span>
         </div>
 
         <!-- macOS -->
         <div class="card">
-            <span class="os-icon">🍎</span>
+            <span class="os-icon"><i class="fab fa-apple"></i></span>
             <h3>macOS</h3>
             <span class="meta">Apple Silicon & Intel</span>
             <!-- REPLACE '#' WITH YOUR MAC ZIP LINK FROM GITHUB RELEASES -->
@@ -135,11 +238,11 @@
 
         <!-- Linux/Source -->
         <div class="card">
-            <span class="os-icon">🐧</span>
+            <span class="os-icon"><i class="fab fa-linux"></i></span>
             <h3>Linux / Source</h3>
             <span class="meta">Python Script</span>
             <!-- REPLACE '#' WITH YOUR SOURCE ZIP LINK -->
-            <a href="#" class="btn secondary">Download Source</a>
+            <a href="https://github.com/harshit3478/KGP-struct/releases/download/new/KGP-Struct-Source-v1.0.0.zip" class="btn secondary">Download Source</a>
             <span class="meta">Requires Python 3.10+</span>
         </div>
     </section>
@@ -147,15 +250,15 @@
     <section class="features">
         <div class="grid">
             <div class="feature-item">
-                <h3>1. Steel Automator</h3>
+                <h3><i class="fas fa-bolt feature-icon"></i> Steel Automator</h3>
                 <p>Automated connection design as per IS 800:2007. Generates shear and bearing capacity checks instantly with parametric blueprints.</p>
             </div>
             <div class="feature-item">
-                <h3>2. Plastic Simulator</h3>
+                <h3><i class="fas fa-chart-line feature-icon"></i> Plastic Simulator</h3>
                 <p>Incremental non-linear analysis for continuous beams. Visualizes plastic hinge formation and collapse mechanisms in real-time.</p>
             </div>
             <div class="feature-item">
-                <h3>3. Topology Optimizer</h3>
+                <h3><i class="fas fa-project-diagram feature-icon"></i> Topology Optimizer</h3>
                 <p>Implements the BESO algorithm to discover efficient structural forms. Features symmetry enforcement and soft-kill stiffness reduction.</p>
             </div>
         </div>
